package nl.han.soex.prototype.transport;

public enum TransportType {
    KLM,
    NS
}
